# slam14-ch10-ceres

./: .gitignore  CMakeLists.txt  README.md  pose_graph_ceres.cpp  pose_graph_ceres_quaternion.cpp  pose_graph_gtsam.cpp  qua_result.g2o  result.g2o
results/: gtsam_result.g2o
